<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_360"
        android:background="@color/dark"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/white"
            >

            <LinearLayout
                style="@style/TextContent"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_150"
                    android:layout_marginTop="@dimen/dp_30"
                    android:elevation="@dimen/dp_10"
                    android:src="@drawable/ic_launcher_background"
                    app:civ_border_color="@color/whitee"
                    app:civ_border_width="@dimen/dp_5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_20">

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/TextContent"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUsername"
                        style="@style/TextContent"
                        android:fontFamily="@font/poppins_medium"
                        android:textAlignment="center"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@color/pink" />

                    <LinearLayout
                        style="@style/TextContent"
                        android:layout_marginTop="@dimen/dp_10"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvFollowers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:textAlignment="center"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/followers"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvRepo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/repository"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvFollowing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:text="@string/following"
                                android:textSize="@dimen/sp_16"
                                android:textStyle="bold"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_baseline_arrow_back_24" />


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed"
                app:tabIndicatorColor="@color/pink"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_65"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/dp_10"
        app:backgroundTint="@color/pink"
        app:elevation="@dimen/dp_5"
        app:pressedTranslationZ="@dimen/dp_10"
        app:fabCustomSize="55dp"
        app:maxImageSize="@dimen/dp_30"
        app:tint="@color/white"
        app:rippleColor="@color/white"
        app:borderWidth="@dimen/dp_0"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_baseline_favorite_24_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>